@@ -25,8 +25,8 @@
 
 defined('MOODLE_INTERNAL') || die();
 
-$plugin->version   = 2017042300;
-$plugin->requires  = 2016120500;
+$plugin->version   = 2017042400;
+$plugin->requires  = 2017051500;
 $plugin->component = 'mod_checkmark';
 $plugin->maturity  = MATURITY_ALPHA;
 $plugin->release   = "v3.3-dev";
