@@ -3,9 +3,13 @@ CHANGELOG
 3.3-dev (2017-04-23)
 ------------------
 
+ * Moodle 3.2 compatible version
  * [FEATURE] #4415 Added separate grading-due-date to remind graders
+ * [FEATURE] #4088 support for FontAwesome icons
  * [CHANGED] #4415 Replaced checkmark_print_overview() output with action events
  * [CHANGED] #4423 Stopped using table_sql's non public API and display initialsbars not in other places like moodleforms
+ * added plugin specific PHPUnit config file
+ * improved coding style and code organisation and removed some unnecessary code
 
 
 3.2.1 (2017-03-02)
